--- a/Full-Stack-JS-Project-Frontend/src/App.css
+++ b/Full-Stack-JS-Project-Frontend/src/App.css
@@ -526,3 +526,30 @@
 .search-input:focus {
   border-color: #007bff;
 }
+
+
+.view-availability-btn {
+  background-color: #6CB4EE;
+  color: white;
+  padding: 8px 18px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  opacity: 0.7;
+  position: relative;
+  top: -10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  transition: all 0.3s ease;
+}
+
+.view-availability-btn:hover {
+  opacity: 1;
+  background-color: #5AA0D8;
+}
+
+.view-availability-btn i {
+  font-size: 14px;
+}
